--- a/afteraction-flow-share.html
+++ b/afteraction-flow-share.html
@@ -1,4 +1,4 @@
-<div id="afteraction-flow-share" style="display: none; height: 100vh; width: 100%; position: absolute; top: 0">
+<div id="afteraction-flow-share" style="display: none; height: 100vh; width: 100%; position: absolute; top: 0; z-index: 11;">
 	<div class="section donate-lead action-lead title-section width-medium bg-{% if page.custom_fields.page_background_color %}{{ page.custom_fields.page_background_color }}{% else %}white{% endif %}{% if page.custom_fields.page_background_image %}-fade{% endif %}">
 		<div class="section-inner">
 			<div
