--- a/thanks.html
+++ b/thanks.html
@@ -199,7 +199,7 @@
 
 
 {% if page.custom_fields.after_action_next_step == "flow" %}
-	<script type="text/javascript" src="https://dbqvwi2zcv14h.cloudfront.net/ak/afteraction-flow-shared.js"></script>
+	<script type="text/javascript" src="https://dbqvwi2zcv14h.cloudfront.net/ak/afteraction-flow-updated.js"></script>
 	<style>
 		#thanks {
 			display: none;
@@ -213,12 +213,15 @@
 			width: 100% !important;
 		}
 
-		body:is(.Signup, .Petition, .Letter, .Donation).body-blue_opaque {
-			background: unset;
+		.site-footer-iframe {
+			position: absolute !important;
+			top: unset !important;
+			bottom: -10rem !important;
+			width: 100%;
 		}
 
-		#site-footer {
-			display: none;
+		body:is(.Signup, .Petition, .Letter, .Donation).body-blue_opaque {
+			background: unset;
 		}
 
 		@media screen and (max-width:720px) {
@@ -234,6 +237,9 @@
 			}
 		}
 	</style>
+	<div class="actionDict">
+		{{ action.as_dict }}
+	</div>
 	{% if action.source == "website" %}
 	<div id="afteraction-flow" style="visibility: hidden; left: -999px; position: absolute; height: 0; width: 0;">
 		<iframe id="donate-iframe" style="height: 110vh; width: 100vw;"></iframe>
@@ -247,57 +253,37 @@
 			const pageId = '{{ page.id }}';
 			const donateSourceCode = `aa_${pageId}_thanksflow`;
 			const donatePageEmbedURL = '{{ page.custom_fields.afteraction_donate_alternate_url }}' || 'https://act.350.org/donate/build';
-			let isPostDonate = false;
-			if (iframe) {
-				iframe.src = `${donatePageEmbedURL}?source=${donateSourceCode}`;
-			} else {
-				isPostDonate = true;
-				$('#afteraction-flow-share #ak-donate-step-1').prop('checked', true);
-				show_share_tick();
-				$('#afteraction-flow-share #ak-donate-step-2').prop('checked', true);
-				show_share_tick();
-				$('.ak-donate-step-1').removeClass('active-step');
-				$('.ak-donate-step-3').addClass('active-step');
-				$('.ak-donate-menu').addClass('tall');
-				$('.ak-donate-step-3').removeClass('hidden');
-			}
+			iframe.src = `${donatePageEmbedURL}?source=${donateSourceCode}`;
 
 			const fundraisingRegions = ['United States', 'Canada', 'United Kingdom', 'Australia', 'New Zealand', 'South Africa', 'Japan', 'France', 'Germany'];
 			const country = '{{ user.country }}';
 
-			var source = '{{ action.source }}';
+			var currentUrl = new URL(window.location.href);
+			var actionID = '{{ action.custom_fields.original_actionid }}';
+			var origPageName = '{{ action.custom_fields.original_page_name }}';
+			var akid = currentUrl.searchParams.get('akid');
+
 			// Render donation form if in fundraising country and not already donated
-			if (fundraisingRegions.includes(country) && source === "website") {
+			if (fundraisingRegions.includes(country) && !actionID) {
 				$('#afteraction-flow').addClass('afteraction-flow-show');
+				$('#site-footer').addClass('site-footer-iframe');
 				$('#afteraction-flow').show();
-			} else if (source != "website") {
+			} else if (actionID) {
 				// Render share ask if post-donation
 				$('#afteraction-flow').removeClass('afteraction-flow-show');
-				show_share_tick();
+				show_share_tick(1);
 				$('.afteraction-share-title').text('{% filter ak_text:"flow_share_step_thanks_donating" %}Thanks for your donation!{% endfilter %}');
 				$('#afteraction-flow-share').show();
 			} else {
 				// Render share ask without editing title
-				show_share_tick();
+				show_share_tick(1);
 				$('#afteraction-flow-share').show();
 			}
-
-			var currentUrl = new URL(window.location.href);
-			var actionID = '{{ action.custom_fields.original_actionid }}' || currentUrl.searchParams.get('action_id');
-			var origPageName = '{{ action.custom_fields.original_page_name }}';
-			var akid = currentUrl.searchParams.get('akid');
 
 			if (typeof gtag !== 'undefined') {
 				// send google analytics event
 				gtag('event', 'scrolling-signup', { 'view_id': 'thanksflow_step1_fundraising_ask' });
 			}
-
-			// Add action_id to Facebook share URL
-			const fbShareEl = $('#afteraction-flow-share .fb-share');
-			if (fbShareEl && fbShareEl.length > 0) {
-				fbShareEl[0].href += `&action_id=${actionID}&akid=${akid}`;
-			}
-
 			// Set Copy Link URL with action_id
 			var copyLinks = $('.copy-link');
 			for (var i = 0; i < copyLinks.length; i++) {
@@ -319,59 +305,8 @@
 				blueskyBtn.href += `&action_id=${actionID}&page=${origPageName}`;
 			}
 
-			$('.bluesky-share').on('click', function(e) {
-				e.preventDefault();
-				if (typeof gtag !== 'undefined') {
-					// send google analytics event
-					gtag('event', 'scrolling-signup', {'click_id': 'thanksflow_share_bsk'});
-				}
-				if (isPostDonate) {
-					$('#afteraction-flow-share #ak-donate-step-3').prop('checked', true);
-					show_share_tick();
-				}
-				var initialShareURL = e.target.href + '&source=share-ak-thanksflow-bsk';
-				var pageFollowup = '{{ page.followup.twitter_message }}';
-				$.ajax({
-					method: 'GET',
-					url: initialShareURL,
-				}).done(function(shareURL) {
-					var blueskyShareURL = `https://bsky.app/intent/compose?text=${shareURL}`;
-					window.open(blueskyShareURL);
-				}).fail(function() {
-					var blueskyShareURL = `https://bsky.app/intent/compose?text=${window.location.href}`;
-					window.open(blueskyShareURL);
-				});
-			});
-
-			$('.copy-link-share').on('click', function (e) {
-				e.preventDefault();
-				if (isPostDonate) {
-					$('#afteraction-flow-share #ak-donate-step-3').prop('checked', true);
-					show_share_tick();
-				}
-				var initialShareURL = e.target.href;
-				var linkButton = e.target;
-				initialShareURL += `&action_id=${actionID}&page=${origPageName}&source=share-ak-thanksflow-copylink`;
-				if (typeof gtag !== 'undefined') {
-					gtag('event', 'scrolling-signup', {'click_id': 'thanksflow_share_copylink'});
-				}
-				$.ajax({
-					method: 'GET',
-					url: initialShareURL,
-				}).done(function(shareURL) {
-					navigator.clipboard.writeText(shareURL);
-					linkButton.text = 'Link Copied!';
-				}).fail(function() {
-					navigator.clipboard.writeText(window.location.href);
-				});
-			});
-
 			$('.whatsapp-share').on('click', function(e) {
 				e.preventDefault();
-				if (isPostDonate) {
-					$('#afteraction-flow-share #ak-donate-step-3').prop('checked', true);
-					show_share_tick();
-				}
 				// Set Whatsapp Share URL based on response from API
 				var getShareURL = `/share/link?type=ot&short=1&source=share-ak-thanksflow-wa&action_id=${actionID}&page=${origPageName}`;
 				if (typeof gtag !== 'undefined') {
@@ -388,6 +323,7 @@
 					if (win) {
 						win.focus();
 					}
+					show_tick(1);
 				}).fail(function () {
 					var whatsappShareURL = 'https://api.whatsapp.com/send?text=' + window.location.href;
 					var win = window.open(whatsappShareURL);
@@ -943,4 +879,3 @@ jQuery(document).ready(function($){
 </script>
 {% endif %}
 {% endblock %}
-
