--- a/donate.html
+++ b/donate.html
@@ -14,6 +14,9 @@
 {% block content %}
 {% if page.custom_fields.after_action_next_step == "flow" %}
 <style>
+  body:is(.Signup, .Petition, .Letter, .Donation).body-blue_opaque {
+    background: unset;
+  }
   #action-lead {
     max-width: 800px;
   }
